Fix profile image fill on user profile and event modal sizing
- User profile: use display block with min-width/height to force fill
- Event modal: move overflow/border/size to container div so scale() zoom is clipped correctly, match event list 100px size

--- a/src/app/common/event/event-modal/event-modal.component.css
+++ b/src/app/common/event/event-modal/event-modal.component.css
@@ -141,13 +141,26 @@ display: flex;
 
 }
 
-.user-img{
-  width: 75px;
-  height: 75px;
-  border-radius: 30% 10% 30% 10%;
+.event-image-container {
   overflow: hidden;
+  border-radius: 30% 10% 30% 10%;
   border: 6px solid whitesmoke;
+  width: 100px;
+  height: 100px;
+  flex-shrink: 0;
+}
+
+.event-image {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.user-img{
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+  display: block;
 }
 
 #item-2{
