--- a/src/app/common/user-profile/user-profile.component.css
+++ b/src/app/common/user-profile/user-profile.component.css
@@ -39,7 +39,6 @@
   cursor: default;
 }
 .profile-image-container {
-  position: relative;
   width: 100px;
   height: 100px;
   overflow: hidden;
@@ -72,11 +71,12 @@
 }
 
 .user-profile-img {
-  position: absolute;
-  inset: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: block;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 .user-profile {
